--- a/src/main/resources/assets/efhexs/lang/en_us.json
+++ b/src/main/resources/assets/efhexs/lang/en_us.json
@@ -28,6 +28,8 @@
 	"efhexs.page.play_item_particle.summary": "Conjures a visual bit of fragments, similar to that caused by a tool breaking after wearing. Takes in an item iota.",
 	"hexcasting.action.efhexs:play_hex_particle": "Conjure Media",
 	"efhexs.page.play_hex_particle.summary": "Conjures a blob of visible _media, not unlike the waste product of my _Hexes. Takes in a color.",
+	"hexcasting.action.efhexs:play_potion_effect": "Conjure Fume",
+	"efhexs.page.play_potion_effect.summary": "Conjures a swirling particle like the ones that emanate from me when I am under the effects of a potion. Takes in a color.",
 	"hexcasting.action.efhexs:play_item_pickup": "Conjure Supply",
 	"efhexs.page.play_item_pickup.summary": "Conjures an illusion of the given item iota at the location and makes it fly into the given entity before disappearing, as though the entity had picked it up.",
 
