zh_cn lang update

--- a/src/main/resources/assets/efhexs/lang/zh_cn.json
+++ b/src/main/resources/assets/efhexs/lang/zh_cn.json
@@ -28,6 +28,10 @@
 	"efhexs.page.play_item_particle.summary": "构筑可视的碎屑，与工具损毁时产生的粒子类似。需要一个物品 iota。",
 	"hexcasting.action.efhexs:play_hex_particle": "构筑媒质",
 	"efhexs.page.play_hex_particle.summary": "构筑一团可视的$(media)媒质$()，和我的$(hex)咒术$()出的纰漏类似。需要一个颜色。",
+	"hexcasting.action.efhexs:play_potion_effect": "构筑烟雾",
+	"efhexs.page.play_potion_effect.summary": "构筑一团螺旋状的烟雾，和我在药水效果影响下散发出的粒子一样。需要一个颜色。",
+	"hexcasting.action.efhexs:play_item_pickup": "构筑物形",
+	"efhexs.page.play_item_pickup.summary": "在所给位置构筑所给物品 iota 的幻象。幻象在消失前会飞向所给实体，就好像该实体捡起了物品一样。",
 
 	"efhexs.page.sounds.title": "声音",
 	"efhexs.page.sounds.0": "我可以听见我周围的声音。此后可重放它们，给$(hex)咒术$()加些好玩的音效。$(br2)$(o)如果森林里有棵树倒了，但附近没人听见，那它还算是发出了声音吗？$()",
